--- a/style.css
+++ b/style.css
@@ -45,15 +45,70 @@
     text-align: center;
   }
   body main .categories_container {
-    max-width: 650px !important;
+    max-width: 362px;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 20px;
+    gap: 25px;
   }
   body main .categories_container_--content {
     width: 100%;
     max-width: 266px;
+  }
+  body main .vacancies {
+    max-width: 618px;
+  }
+  body main .vacancies_title {
+    text-align: center;
+  }
+  body main .vacancies_container {
+    max-width: 850px;
+  }
+  body main .vacancies_container--content {
+    max-width: 620px;
+  }
+  body main .vacancies_container--content--card {
+    padding: 30px 54px;
+  }
+  body main .vacancies_container--content--card--box {
+    max-width: 295px;
+    flex-direction: column;
+  }
+  body main .vacancies_container--content--card--box--info {
+    flex-direction: column;
+  }
+  body main .vacancies_container--content--card--box--info--details {
+    margin-bottom: 15px;
+  }
+  body main .vacancies_container--content--card--box--info--salary {
+    margin-bottom: 25px;
+  }
+  body .footer {
+    max-width: 825px;
+    flex-direction: column;
+    align-items: center;
+  }
+  body .footer_info--logo {
+    display: block;
+    margin: 0 auto;
+  }
+  body .footer_info--desc {
+    margin-top: 26px;
+    margin-bottom: 3px;
+    text-align: center;
+  }
+  body .footer_info--year {
+    text-align: center;
+  }
+  body .footer_container {
+    max-width: 466px;
+    flex-direction: column;
+  }
+  body .footer_container--content {
+    margin-bottom: 40px;
+  }
+  body .footer_container--nav a {
+    text-align: center;
   }
 }
 @media (max-width: 768px) {
@@ -131,10 +186,13 @@
   body .header_container--menu--interact {
     width: 100%;
     max-width: 330px;
+    position: absolute;
+    bottom: 40px;
+    left: 50%;
+    transform: translateX(-50%);
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    margin-top: 620px;
   }
   body .header_container--menu--interact--register {
     font-family: Fira Sans;
@@ -188,13 +246,101 @@
     padding-left: 15px;
   }
   body main .categories_title {
+    font-size: 18px;
     text-align: center;
   }
   body main .categories_container {
-    max-width: 266px !important;
+    max-width: 166px !important;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
+  }
+  body main .vacancies {
+    max-width: 290px;
+  }
+  body main .vacancies_title {
+    font-size: 18px;
+    margin-top: 50px;
+    margin-bottom: 40px;
+  }
+  body main .vacancies_container {
+    max-width: 290px;
+  }
+  body main .vacancies_container--content {
+    width: 100%;
+    max-width: 290px;
+    padding: 30px 54px;
+  }
+  body main .vacancies_container--content--card {
+    flex-direction: column;
+  }
+  body main .vacancies_container--content--card--box {
+    max-width: 183px;
+    flex-direction: column;
+  }
+  body main .vacancies_container--content--card--box--info {
+    max-width: 183px;
+    flex-direction: column;
+    align-items: center;
+  }
+  body main .vacancies_container--content--card--box--info--details {
+    flex-direction: column;
+  }
+  body main .vacancies_container--content--card--box--info--details--themselves {
+    flex-direction: column;
+    text-align: center;
+  }
+  body main .vacancies_container--content--card--box--requirements {
+    max-width: 183px;
+    flex-direction: column;
+  }
+  body main .vacancies_container--content--card--box--requirements--title {
+    display: block;
+    margin: 0 auto;
+  }
+  body main .vacancies_container--content--card--more {
+    width: 100%;
+  }
+  body main .subscribe_container {
+    max-width: 290px;
+  }
+  body main .subscribe_container--title {
+    font-size: 24px;
+  }
+  body main .subscribe_container--desc {
+    max-width: 290px;
+  }
+  body main .subscribe_container--input {
+    padding: 13px 10px 13px 25px;
+  }
+  body main .subscribe_container--input--search {
+    padding: 15px 30px;
+  }
+  body main .subscribe_container--input--search p {
+    display: none;
+  }
+  body .footer {
+    max-width: 170px;
+  }
+  body .footer_info--desc {
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+  body .footer_container {
+    max-width: 170px;
+  }
+  body .footer_container--content {
+    margin: 0;
+    flex-direction: column;
+  }
+  body .footer_container--content--box {
+    margin-bottom: 30px;
+  }
+  body .footer_container--content--box--title {
+    text-align: center;
+  }
+  body .footer_container--content--box a {
+    text-align: center;
   }
 }
 * {
@@ -475,4 +621,307 @@ main .categories_container--content:nth-child(5) {
 }
 main .categories_container--content:nth-child(6) {
   padding: 35px 32px;
+}
+main .vacancies {
+  width: 100%;
+  max-width: 1146px;
+  margin: 0 auto;
+}
+main .vacancies_title {
+  font-family: Fira Sans;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: #111238;
+  margin-top: 150px;
+  margin-bottom: 40px;
+}
+main .vacancies_container {
+  width: 100%;
+  margin-bottom: 40px;
+}
+main .vacancies_container--content {
+  border: 1px solid #C5C9D4;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  max-width: 1061px;
+}
+main .vacancies_container--content--card {
+  width: 100%;
+  max-width: 1061px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 55px 30px 30px;
+}
+main .vacancies_container--content--card--box {
+  width: 100%;
+  max-width: 791px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+main .vacancies_container--content--card--box--info {
+  width: 100%;
+  max-width: 452px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+main .vacancies_container--content--card--box--info--details {
+  width: 100%;
+  max-width: 293px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+main .vacancies_container--content--card--box--info--details--themselves--species {
+  font-family: Fira Sans;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: #111238;
+  margin-bottom: 10px;
+}
+main .vacancies_container--content--card--box--info--details--themselves--place {
+  font-family: Fira Sans;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: #111238;
+}
+main .vacancies_container--content--card--box--info--salary {
+  font-family: Fira Sans;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-align: center;
+  color: #FFFFFF;
+  background-color: #1A75E8;
+  padding: 10px 25px;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+}
+main .vacancies_container--content--card--box--requirements {
+  width: 100%;
+  max-width: 281px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+main .vacancies_container--content--card--box--requirements--title {
+  font-family: Fira Sans;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: #B2B2B2;
+}
+main .vacancies_container--content--card--box--requirements--knowledges {
+  width: 100%;
+  max-width: 183px;
+  display: flex;
+  justify-content: space-between;
+}
+main .vacancies_container--content--card--box--requirements--knowledges button {
+  font-family: Fira Sans;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: #B2B2B2;
+  background: none;
+  padding: 5px 10px;
+  border: 1px solid #B2B2B2;
+  border-radius: 5px;
+  cursor: pointer;
+}
+main .vacancies_container--content--card--more {
+  font-family: Fira Sans;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: #1A75E8;
+  text-decoration: none;
+}
+main .vacancies_more {
+  font-family: Fira Sans;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-align: center;
+  color: #FFFFFF;
+  cursor: pointer;
+  padding: 15px 30px;
+  background-color: #1A75E8;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 80px;
+}
+main .subscribe {
+  background-color: #F2F3F6;
+  padding-top: 90px;
+  padding-bottom: 90px;
+}
+main .subscribe_container {
+  width: 100%;
+  max-width: 460px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+main .subscribe_container--title {
+  font-family: Fira Sans;
+  font-weight: 900;
+  font-size: 36px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-align: center;
+  color: #111238;
+  margin-bottom: 20px;
+}
+main .subscribe_container--desc {
+  font-family: Fira Sans;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 140%;
+  letter-spacing: 0%;
+  text-align: center;
+  color: #111238;
+  margin-bottom: 40px;
+  max-width: 388px;
+}
+main .subscribe_container--input {
+  border: 1px solid rgba(209, 209, 209, 0.1019607843);
+  background-color: #FFFFFF;
+  padding: 11px 10px 10px 25px;
+  display: flex;
+  box-shadow: 0px 4px 25px 0px rgba(15, 17, 56, 0.1019607843);
+  border-radius: 5px;
+}
+main .subscribe_container--input input {
+  border: none;
+  outline: none;
+  font-family: Fira Sans;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: #b2b2b2;
+}
+main .subscribe_container--input--search {
+  padding: 15px 30px;
+  font-family: Fira Sans;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: #FFFFFF;
+  background-color: #1A75E8;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  display: flex;
+  border-radius: 5px;
+}
+main .subscribe_container--input--search p {
+  padding-left: 10px;
+}
+
+.footer {
+  width: 100%;
+  max-width: 1064px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-bottom: 64px;
+  margin-top: 70px;
+}
+.footer_info {
+  width: 100%;
+  max-width: 190px;
+}
+.footer_info--desc {
+  font-family: Fira Sans;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 140%;
+  letter-spacing: 0%;
+  color: #b2b2b2;
+  margin-top: 33px;
+  margin-bottom: -8px;
+}
+.footer_info--year {
+  font-family: Fira Sans;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 140%;
+  letter-spacing: 0%;
+  color: #b2b2b2;
+}
+.footer_container {
+  width: 100%;
+  max-width: 810px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 32px;
+}
+.footer_container--content {
+  width: 100%;
+  max-width: 459px;
+  display: flex;
+  justify-content: space-between;
+}
+.footer_container--content--box--title {
+  font-family: Fira Sans;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: #111238;
+  margin-bottom: 15px;
+}
+.footer_container--content--box a {
+  font-family: Fira Sans;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: #111238;
+  margin-bottom: 10px;
+  text-decoration: none;
+  display: block;
+}
+.footer_container--nav--title {
+  font-family: Fira Sans;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: #111238;
+  margin-bottom: 15px;
+}
+.footer_container--nav a {
+  font-family: Fira Sans;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-decoration: none;
+  display: block;
+  margin-bottom: 10px;
+  color: #111238;
 }/*# sourceMappingURL=style.css.map */
